cabal-version:      3.0
name:               ppad-hmac-drbg
version:            0.1.0
synopsis:           HMAC-based deterministic random bit generator
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.8.1 }
extra-doc-files:    CHANGELOG
description:
  A pure implementation of the HMAC-DRBG CSPRNG, as specified by NIST-SP
  800-90A.

source-repository head
  type:     git
  location: git.ppad.tech/hmac-drbg.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.DRBG.HMAC
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , primitive

test-suite hmac-drbg-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , base16-bytestring
    , bytestring
    , ppad-hmac-drbg
    , ppad-sha256 >= 0.1.0 && < 0.2.0
    , tasty
    , tasty-hunit

